@@ -1,18 +1,23 @@
 package com.challet.bankservice.domain.elastic.repository;
 
+import java.io.IOException;
+import java.util.List;
+
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
+import org.springframework.stereotype.Repository;
+
+import com.challet.bankservice.domain.entity.SearchedTransaction;
+
 import co.elastic.clients.elasticsearch.ElasticsearchClient;
-import co.elastic.clients.elasticsearch._types.query_dsl.*;
+import co.elastic.clients.elasticsearch._types.SortOptions;
+import co.elastic.clients.elasticsearch._types.SortOrder;
+import co.elastic.clients.elasticsearch._types.query_dsl.BoolQuery;
+import co.elastic.clients.elasticsearch._types.query_dsl.Query;
 import co.elastic.clients.elasticsearch.core.SearchResponse;
 import co.elastic.clients.elasticsearch.core.search.Hit;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.*;
-import org.springframework.stereotype.Repository;
-
-import java.io.IOException;
-import java.util.List;
-import java.util.stream.Collectors;
-
-import com.challet.bankservice.domain.entity.SearchedTransaction;
 
 @Repository
 @RequiredArgsConstructor
@@ -23,7 +28,6 @@ public class CustomSearchedTransactionRepositoryImpl implements CustomSearchedTr
 	@Override
 	public Page<SearchedTransaction> findByAccountIdAndKeyword(Long accountId, String keyword, Pageable pageable) {
 		try {
-			// Bool 쿼리 생성
 			BoolQuery.Builder boolQueryBuilder = new BoolQuery.Builder()
 				.must(mq -> mq.term(t -> t.field("accountId").value(accountId)));
 
@@ -38,19 +42,22 @@ public class CustomSearchedTransactionRepositoryImpl implements CustomSearchedTr
 
 			Query query = boolQueryBuilder.build()._toQuery();
 
-			// 검색 요청 생성
+			SortOptions sortOptions = SortOptions.of(so -> so
+				.field(f -> f.field("transactionDate").order(SortOrder.Desc))
+			);
+
 			SearchResponse<SearchedTransaction> searchResponse = elasticsearchClient.search(s -> s
 					.index("ch_bank_transaction")
 					.query(query)
+					.sort(sortOptions)
 					.from((int) pageable.getOffset())
 					.size(pageable.getPageSize()),
 				SearchedTransaction.class
 			);
 
-			// 검색 결과 처리
 			List<SearchedTransaction> content = searchResponse.hits().hits().stream()
 				.map(Hit::source)
-				.collect(Collectors.toList());
+				.toList();
 
 			long total = searchResponse.hits().total() != null ? searchResponse.hits().total().value() : 0;
 
@@ -61,4 +68,3 @@ public class CustomSearchedTransactionRepositoryImpl implements CustomSearchedTr
 		}
 	}
 }
-
